<?xml version="1.0"?>
<package format="2">
  <name>rrt_star_planner</name>
  <version>0.0.0</version>
  <description>The rrt_star_planner package</description>

  <maintainer email="kent.alvin@u.nus.edu">Kent Alvin</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>

  <export>
  </export>
</package>
